kubernetes/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pomodoro-service
spec:
  hosts:
  - "localhost"
  gateways:
  - pomodoro-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend
        port:
          number: 4000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
